[package]
name = "bevy_mod_mipmap_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy_app = { version = "0.14", default-features = false }
bevy_asset  = { version = "0.14", default-features = false }
bevy_color = { version = "0.14", default-features = false, optional = true}
bevy_core_pipeline  = { version = "0.14", default-features = false }
bevy_derive = { version = "0.14", default-features = false }
bevy_ecs = { version = "0.14", default-features = false }
bevy_gltf = { version = "0.14", default-features = false }
bevy_hierarchy = { version = "0.14", default-features = false }
bevy_log = { version = "0.14", default-features = false }
bevy_pbr = { version = "0.14", default-features = false }
bevy_render = { version = "0.14", default-features = false, features = ["ktx2", "zstd", "jpeg", "multi_threaded"] }
bevy_scene = { version = "0.14", default-features = false }
bevy_tasks = { version = "0.14", default-features = false }
bevy_text = { version = "0.14", default-features = false, optional = true }
bevy_time = { version = "0.14", default-features = false }
bevy_ui = { version = "0.14", default-features = false, optional = true }
bevy_utils = { version = "0.14", default-features = false }
futures-lite = { version = "2.3", default-features = false }
image = { version = "0.25", default-features = false }
intel_tex_2 = { version = "0.4.0", optional = true }
zstd = { version = "0.13.2", optional = true }

[dev-dependencies]
bevy = { version = "0.14" }

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug_text"]
compress = ["dep:intel_tex_2", "dep:zstd"]
debug_text = ["bevy_color", "bevy_text", "bevy_ui", "bevy_ui/bevy_text"]
